fix link error on ARM

--- a/cpp-driver/Makefile
+++ b/cpp-driver/Makefile
@@ -1,4 +1,4 @@
 CC=g++
 
 all:
-	$(CC) main.cpp PracticalSocket.cpp -o cpp-driver -lblas
+	$(CC) main.cpp PracticalSocket.cpp -o cpp-driver -lblas -lpthread
