Initial Rev of FeatureStreamer

--- a/cpp-driver/Makefile
+++ b/cpp-driver/Makefile
@@ -1,4 +1,4 @@
 CC=g++
 
 all:
-	$(CC) main.cpp PracticalSocket.cpp -o cpp-driver -lblas -lpthread
+	$(CC) main.cpp PracticalSocket.cpp FeatureStreamer.cpp -o cpp-driver -lblas -lpthread
