Added a threadsafe mailbox for passing Frames from producer to consumer threads

--- a/cpp-driver/Makefile
+++ b/cpp-driver/Makefile
@@ -1,4 +1,9 @@
 CC=g++
 
-all:
+all: cpp-driver
+
+cpp-driver:
 	$(CC) main.cpp PracticalSocket.cpp FeatureStreamer.cpp -o cpp-driver -lblas -lpthread
+
+test-mailbox:
+	$(CC) test_Mailbox.cpp -I/usr/local/include -o test_Mailbox -L/usr/local/lib -lcppunit -ldl
